# PROG

./: CMakeLists.txt  README.md  check.c  func.c  func.h  input.h  lab1.c  process.c  process.h  strings.c  strings.h
lab1/: CMakeLists.txt  README.md
lab1/src/: check.c  check_func.c  check_func.h  input.c  lab1.c  output.c  output.h  process.c  strings.c
lab2/: 1.c  2.c  3.c  4.c
lab3/: CMakeLists.txt
lab3/cfg/: cfg.xml
lab3/src/: create_buf.c  create_buf.h  llist.c  llist.h  main.c  stack.c  stack.h  strings.c  strings.h  token.c  token.h
lab3/src/way/: check.c  check_func.c  check_func.h  output.c  output.h  process.c  strings.c  strings.h  way.c  way.h
lab3/src/xml/: check_mark.c  check_mark.h  create_buf.c  llist.c  main.c  token.c  working.c  working.h
src/: check.c  check.h  check_func.c  check_func.h  func.c  func.h  input.c  input.h  lab1.c  main.c  output.c  process.c  process.h  strings.c  strings.h
